v1.1 - nav fix on mobile

--- a/style.css
+++ b/style.css
@@ -133,6 +133,13 @@ nav {
   border: none;
 }
 
+@media only screen and (max-width: 576px) {
+  .navbar {
+    background-color: rgb(255, 255, 255);
+    backdrop-filter: none;
+  }
+}
+
 /* NAWIGACJA MOBILE*/
 
 .offcanvas {
